2008-09-08 (0.1.1)
  * Add --user and --dir command-line options
  * Change dbm file from cascket.tch to casket.tch
  * Successfully build gem on github

2008-09-07 (0.1)
  * Initial release
