@@ -1,4 +1,5 @@
 2008-09-08 (0.1.1)
+  * Show ttbase dir on 'config' command
   * Add --user and --dir command-line options
   * Change dbm file from cascket.tch to casket.tch
   * Successfully build gem on github
